ethash/ingress/ingress-rules-besu-private.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: network-nginx
  namespace: besu
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-besu-access
  namespace: besu
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: network-nginx
  rules:
  - http:
      paths:
      - path: /rpc
        pathType: Prefix
        backend:
          service:
            name: besu-node
            port:
              name: json-rpc
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: besu-node
            port:
              name: graphql
      - path: /bootnode1
        pathType: Prefix
        backend:
          service:
            name: besu-bootnode1
            port:
              name: rlpx
      - path: /bootnode2
        pathType: Prefix
        backend:
          service:
            name: besu-bootnode2
            port:
              name: rlpx
